# dave

./: .dockerignore  .gitignore  .gitmodules  .luarc.json  AUTHORS  Cargo.toml  README.md  TEST.md  justfile
.cargo/: config.toml
cartesi-rollups/node/: Cargo.toml  Dockerfile.test  README.md  rollups-test-entrypoint.sh
cartesi-rollups/node/blockchain-reader/: Cargo.toml
cartesi-rollups/node/blockchain-reader/src/: error.rs  find_contract_creation.rs  lib.rs  test_utils.rs
cartesi-rollups/node/cartesi-rollups-prt-node/: Cargo.toml
cartesi-rollups/node/cartesi-rollups-prt-node/src/: args.rs  lib.rs  main.rs  provider.rs
cartesi-rollups/node/compute-runner/: Cargo.toml
cartesi-rollups/node/compute-runner/src/: lib.rs
cartesi-rollups/node/dave-rollups/: Cargo.toml
cartesi-rollups/node/dave-rollups/src/: lib.rs  main.rs
cartesi-rollups/node/epoch-manager/: Cargo.toml
cartesi-rollups/node/epoch-manager/src/: error.rs  lib.rs
cartesi-rollups/node/machine-runner/: Cargo.toml
cartesi-rollups/node/machine-runner/src/: error.rs  lib.rs  rollups_machine.rs
cartesi-rollups/node/machine-runner/test-files/: machine_state_hashes.test
cartesi-rollups/node/prt-runner/: Cargo.toml
cartesi-rollups/node/prt-runner/src/: error.rs  lib.rs
cartesi-rollups/node/state-manager/: Cargo.toml
cartesi-rollups/node/state-manager/src/: lib.rs  persistent_state_access.rs  rollups_machine.rs  state_manager.rs  sync.rs
common-rs/: Cargo.toml  README.md
common-rs/arithmetic/: Cargo.toml
common-rs/arithmetic/src/: lib.rs
common-rs/kms/: Cargo.toml  README.md  aws.env  aws.sh  compose.yaml
common-rs/kms/src/: lib.rs
common-rs/merkle/: Cargo.toml
common-rs/merkle/src/: lib.rs  node.rs  tree.rs  tree_builder.rs
common-rs/merkle/src/digest/: keccak.rs  mod.rs
machine/machine-rust-bindings/: Cargo.toml
machine/machine-rust-bindings/cartesi-machine/: Cargo.toml
machine/machine-rust-bindings/cartesi-machine-sys/: Cargo.toml  README.md  build.rs
machine/machine-rust-bindings/cartesi-machine-sys/src/: lib.rs
machine/machine-rust-bindings/cartesi-machine/src/: configuration.rs  constants.rs  errors.rs  hash.rs  htif.rs  lib.rs  log.rs  machine.rs  proof.rs  utils.rs
machine/rust-bindings/: Cargo.toml
machine/rust-bindings/cartesi-machine/: Cargo.toml  README.md
machine/rust-bindings/cartesi-machine-sys/: Cargo.toml  build.rs
machine/rust-bindings/cartesi-machine-sys/src/: lib.rs
machine/rust-bindings/cartesi-machine/src/: configuration.rs  constants.rs  error.rs  lib.rs  log.rs  machine.rs  proof.rs
offchain/: Cargo.toml  Dockerfile.compute  Dockerfile.compute.debootstrap  Dockerfile.compute.test  README.md  compute-entrypoint.sh  compute-test-entrypoint.sh
offchain/coordinator/: build.rs
offchain/coordinator/src/: main.rs  server.rs
offchain/coordinator/src/grpc/: coordinator.rs  mod.rs
offchain/core/: Cargo.toml  build.rs
offchain/core/artifacts/: BottomTournamentFactory.json  LeafTournament.json  MiddleTournamentFactory.json  NonLeafTournament.json  NonRootTournament.json  RootTournament.json  SingleLevelTournamentFactory.json  TopTournamentFactory.json  Tournament.json  TournamentFactory.json
offchain/core/src/: lib.rs  player.rs
offchain/core/src/arena/: arena.rs  config.rs  ethers_arena.rs  mod.rs  reader.rs  sender.rs  util.rs
offchain/core/src/contract/: mod.rs
offchain/core/src/machine/: commitment.rs  commitment_builder.rs  instance.rs  mod.rs  rpc.rs
offchain/core/src/merkle/: hash.rs  mod.rs  node.rs  tree.rs  tree_builder.rs
offchain/core/src/strategy/: gc.rs  mod.rs  player.rs
offchain/core/src/utils/: arithmetic.rs
offchain/dave-advance/: Cargo.toml  README.md
offchain/dave-advance/src/: encode.rs  lib.rs
offchain/dave-compute/: Cargo.toml
offchain/dave-compute/src/: main.rs
offchain/input-manager/: Cargo.toml
offchain/input-manager/src/: lib.rs
offchain/input-query/: Cargo.toml
offchain/input-query/src/: lib.rs
offchain/input-reader/: Cargo.toml
offchain/input-reader/src/: lib.rs  main.rs
offchain/machine/: Cargo.toml
offchain/machine/src/: lib.rs  main.rs
offchain/simulator/src/: engine.rs  main.rs
offchain/state-manager/: Cargo.toml
offchain/state-manager/src/: lib.rs
prt/client-rs/: Cargo.toml
prt/client-rs/core/: Cargo.toml
prt/client-rs/core/src/: lib.rs
prt/client-rs/executable/: Cargo.toml  Dockerfile
prt/client-rs/executable/src/: lib.rs  main.rs
prt/client-rs/src/arena/: arena.rs  config.rs  reader.rs  sender.rs
prt/client-rs/src/db/: compute_state_access.rs  dispute_state_access.rs  mod.rs
prt/client-rs/src/machine/: commitment.rs  commitment_builder.rs  instance.rs
prt/client-rs/src/strategy/: gc.rs  mod.rs  player.rs
prt/compute-rs/: Cargo.toml  Dockerfile.compute.test  README.md  compute-test-entrypoint.sh
prt/compute-rs/core/: Cargo.toml  build.rs
prt/compute-rs/core/src/: lib.rs
prt/compute-rs/dave-compute/: Cargo.toml
prt/compute-rs/dave-compute/src/: main.rs
prt/prt-rs/: Cargo.toml  Dockerfile  Dockerfile.compute.test  README.md  compute-test-entrypoint.sh
prt/prt-rs/compute/: Cargo.toml
prt/prt-rs/compute/src/: lib.rs  main.rs
prt/prt-rs/core/: Cargo.toml
prt/prt-rs/core/src/: lib.rs
prt/prt-rs/src/: lib.rs
prt/prt-rs/src/arena/: sender.rs
prt/prt-rs/src/db/: dispute_state_access.rs  mod.rs
prt/prt-rs/src/machine/: commitment.rs  commitment_builder.rs  constants.rs  instance.rs
prt/prt-rs/src/strategy/: gc.rs  player.rs
rollups-node/: Cargo.toml  Dockerfile.test  README.md
rollups-node/blockchain-reader/: Cargo.toml
rollups-node/blockchain-reader/src/: error.rs  lib.rs
rollups-node/dave-rollups/: Cargo.toml
rollups-node/dave-rollups/src/: lib.rs  main.rs
rollups-node/epoch-manager/: Cargo.toml
rollups-node/epoch-manager/src/: lib.rs
rollups-node/machine-runner/: Cargo.toml
rollups-node/machine-runner/src/: error.rs  lib.rs
rollups-node/machine-runner/test-files/: inputs.test  split_inputs.sh
rollups-node/state-manager/: Cargo.toml
rollups-node/state-manager/src/: lib.rs  persistent_state_access.rs
(+772 files in other folders)
