[workspace]
resolver = "2"
members = [
    "arithmetic",
    "merkle",
]

[workspace.package]
version = "0.1.0"

authors = [
  "Gabriel Coutinho de Paula <gcdepaula@protonmail.io>",
  "Algebraic Sofia <sofia@algebraic.dev>",
  "Stephen Chen <stephenx747@gmail.com>",
]
description = "A Cartesi validator reference implementation"
edition = "2021"
homepage = "https://github.com/cartesi/dave"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/cartesi/dave"

[workspace.dependencies]