[workspace]
resolver = "2"
members = [
    "blockchain-reader",
    "dave-rollups",
    "epoch-manager",
    "machine-runner",
    "state-manager",
]

[workspace.package]
version = "0.1.0"

authors = [
  "Gabriel Coutinho de Paula <gcdepaula@protonmail.com>",
  "Stephen Chen <stephenx747@gmail.com>",
]
description = "A Cartesi validator reference implementation"
edition = "2021"
homepage = "https://github.com/cartesi/dave"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/cartesi/dave"

[workspace.dependencies]
rollups-blockchain-reader = { version = "0.1", path = "blockchain-reader" }
rollups-compute-runner = { version = "0.1", path = "compute-runner" }
rollups-epoch-manager = { version = "0.1", path = "epoch-manager" }
rollups-machine-runner = { version = "0.1", path = "machine-runner" }
rollups-state-manager = { version = "0.1", path = "state-manager" }

cartesi-machine = { path = "../../machine/rust-bindings/cartesi-machine" }
cartesi-dave-arithmetic = { path = "../../common-rs/arithmetic" }
cartesi-dave-contracts = { path = "../contract-bindings" }
cartesi-dave-merkle = { path = "../../common-rs/merkle" }
cartesi-prt-core = { path = "../../prt/client-rs" }

alloy = { version = "0.3.1", features = ["sol-types", "contract", "network", "reqwest", "signers", "signer-local"] }
anyhow = "1.0"
async-recursion = "1"
async-trait = "0.1.74"
cartesi-rollups-contracts = "2.0.0-rc.9"
clap = { version = "4.5.7", features = ["derive", "env"] }
clap_derive = "=4.5.13"
futures = "0.3"
log = "0.4"
num-traits = "0.2.19"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
