[package]
name = "kms"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
aws-config = { version = "1.5", default-features = false, features = [
    "rustls",
    "rt-tokio",
] }
aws-sdk-kms = { version = "1.51", default-features = false, features = [
    "rustls",
    "rt-tokio",
] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
alloy = { version = "0.11", features = ["signer-aws"] }
dotenvy = "0.15.7"
