[package]
name = "cartesi-dave-kms"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
aws-config = { version = "1.6", default-features = false, features = [
    "rustls",
    "rt-tokio",
] }
aws-sdk-kms = { version = "1.65", default-features = false, features = [
    "rustls",
    "rt-tokio",
] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
alloy = { workspace = true, features = ["signer-aws"] }
testcontainers-modules = { version = "0.11.6", default-features = false, features = [
    "localstack",
] }
anyhow = { workspace = true }

[dev-dependencies]
lazy_static = { workspace = true }
