[package]
name = "cartesi-dave-merkle"
version = { workspace = true }

authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }

[dependencies]
alloy = { version = "0.3.1", features = ["sol-types"] }
hex = "0.4"
ruint = "1.12"
sha3 = "0.10"
thiserror = "1.0"
