[package]
name = "cartesi-dave-merkle"
version = { workspace = true }

authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }

[dependencies]
alloy = { workspace = true, features = ["sol-types"] }
ruint = { workspace = true }

hex = "0.4"
tiny-keccak = { workspace = true }
thiserror = { workspace = true }
