[package]
name = "cartesi-compute-core"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
cartesi-machine-json-rpc = { path = "../../machine-json-rpc" }
async-recursion = { workspace = true }
async-trait = { workspace = true }
ethers = { workspace = true }
log = { workspace = true }
base64 = "0.21.3"
hex = "0.4.3"
sha3 = "0.10.8"
serde_json = "1.0.107"
serde = "1"
thiserror = "1.0.50"

[build-dependencies]
ethers-contract-abigen = "2.0.11"
