[package]
name = "dave-advance"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cartesi-machine-json-rpc = { path = "../../machine-json-rpc" }
tokio = { workspace = true }
base64 = "0.21.3"
hex = "0.4.3"
ethers.workspace = true
serde_json = "1.0.100"