[package]
name = "rollups-input-reader"
version = { workspace = true }

authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-recursion = { workspace = true }
cartesi-rollups-contracts = "2.0.0-rc.1"
ethers = { workspace = true }
ethers-contract = "2.0.13"
futures = { workspace = true }
serde = "1.0.197"
tokio = { workspace = true }
