[package]
name = "rollups-input-reader"
version = { workspace = true }

authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-recursion = { workspace = true }
ethers = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
