[package]
name = "cartesi-prt-core"
version = "0.1.0"

authors = [
  "Gabriel Coutinho de Paula <gcdepaula@protonmail.io>",
  "Algebraic Sofia <sofia@algebraic.dev>",
  "Stephen Chen <stephenx747@gmail.com>",
]
description = "A Cartesi validator reference implementation"
edition = "2021"
homepage = "https://github.com/cartesi/dave"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/cartesi/dave"

[dependencies]
# common-rs
cartesi-dave-arithmetic = { workspace = true }
cartesi-dave-merkle = { workspace = true }

# machine bindings
cartesi-machine = { workspace = true }

# solidity bindings
cartesi-prt-contracts = { workspace = true }

alloy = { workspace = true, features = ["sol-types", "contract", "network", "reqwest", "signers", "signer-local"] }
ruint = { workspace = true, features = ["num-traits"] }

# async
async-recursion = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }

anyhow = { workspace = true }
thiserror = { workspace = true }


clap = { workspace = true, features = ["derive", "env"] }
hex = { workspace = true }
lazy_static = "1.4.0"
log = { workspace = true }
num-traits = { workspace = true }
rusqlite = { version = "0.31.0", features = ["bundled"] }
rusqlite_migration = "1.2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
