[workspace]
resolver = "2"
members = [
    "core",
    "dave-compute",
]

[workspace.package]
version = "0.1.0"

authors = [
  "Gabriel Coutinho de Paula <gcdepaula@protonmail.io>",
  "Algebraic Sofia <sofia@algebraic.dev>",
  "Stephen Chen <stephenx747@gmail.com>",
]
description = "A Cartesi validator reference implementation"
edition = "2021"
homepage = "https://github.com/cartesi/dave"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/cartesi/dave"

[workspace.dependencies]
cartesi-machine = { path = "../../machine/machine-rust-bindings/cartesi-machine" }
anyhow = "1.0.63"
async-recursion = "1"
async-trait = "0.1.74"
ethers = "2.0.11"
futures = "0.3"
log = "0.4"
tokio = { version = "1", features = ["full"] }
