[package]
name = "rollups-blockchain-reader"
version = { workspace = true }

authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }

[dependencies]
rollups-state-manager = { path = "../state-manager" }
anyhow = { workspace = true }
async-recursion = { workspace = true }
ethers = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
ethers-contract = "2.0.13"
serde = "1.0.197"
