[package]
name = "rollups-blockchain-reader"
version = { workspace = true }

authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }

[dependencies]
rollups-state-manager = { path = "../state-manager" }
async-recursion = { workspace = true }
cartesi-rollups-contracts = { workspace = true }
ethers = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
