[package]
name = "rollups-epoch-manager"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
rollups-state-manager = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
