[package]
name = "rollups-state-manager"
version = { workspace = true }

authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = "1.0.6"
rusqlite = { version = "0.31.0", features = ["bundled"] }
