[package]
name = "rollups-blockchain-reader"
version = { workspace = true }

authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }

[dependencies]
rollups-state-manager = { workspace = true }
cartesi-dave-contracts = { workspace = true }
cartesi-rollups-contracts = { workspace = true }

alloy = { workspace = true }
alloy-rpc-types-eth = "0.8.0"
async-recursion = { workspace = true }
clap = { workspace = true }
clap_derive = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
num-traits = { workspace = true }
