[package]
name = "rollups-blockchain-reader"
version = { workspace = true }

authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }

[dependencies]
rollups-state-manager = { workspace = true }
cartesi-dave-contracts = { workspace = true }
cartesi-rollups-contracts = { workspace = true }
cartesi-dave-merkle = { workspace = true }

alloy = { workspace = true }
async-recursion = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
alloy = { workspace = true, features = ["node-bindings", "rpc-types"] }
cartesi-prt-contracts = { workspace = true }

rusqlite = { workspace = true }
rusqlite_migration = { workspace = true }

clap = { workspace = true }
