[package]
name = "rollups-epoch-manager"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
cartesi-dave-contracts = { workspace = true }
cartesi-prt-core = { workspace = true }
rollups-state-manager = { workspace = true }

alloy = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
