[package]
name = "rollups-state-manager"
version = { workspace = true }

authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }

[dependencies]
lazy_static = { workspace = true }
rusqlite = { workspace = true }
rusqlite_migration = { workspace = true }

thiserror = { workspace = true }
