[package]
name = "rollups-state-manager"
version = { workspace = true }

authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }

[dependencies]
cartesi-dave-merkle = { workspace = true }
cartesi-machine = { workspace = true }
cartesi-prt-core = { workspace = true }

alloy = { workspace = true }

lazy_static = { workspace = true }
rusqlite = { workspace = true }
rusqlite_migration = { workspace = true }

hex = { workspace = true }
tempfile = "3"

anyhow = { workspace = true }
thiserror = { workspace = true }
